@@ -3,12 +3,14 @@ package com.example.demo.service;
 import com.example.demo.domain.PlaylistCreateRequest;
 import com.example.demo.domain.PlaylistResponse;
 import com.example.demo.domain.PlaylistUpdateRequest;
+import com.example.demo.domain.entity.PlaylistEntity;
 import com.example.demo.mapper.PlaylistMapper;
 import com.example.demo.mapper.UserMapper;
 import com.example.demo.mapper.VideoMapper;
 import com.example.demo.repository.PlaylistRepository;
 import com.example.demo.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
@@ -54,7 +56,7 @@ public class PlaylistService {
 	    var model = playlistMapper.toDto(c);
 	    model.setVideoCount(c.getVideos().size());
 	    return model;
-	}).collect(Collectors.toList());
+	}).toList();
     }
 
     public PlaylistResponse getPlaylist(UUID id) {
@@ -64,5 +66,15 @@ public class PlaylistService {
 		playlist.getVideos().stream().map(videoMapper::toResponse).collect(Collectors.toList()));
 	response.setUserResponse(userMapper.doMap(playlist.getUser()));
 	return response;
+    }
+
+    public List<PlaylistResponse> getPlaylistsByCreator(UUID id, String search) {
+	List<PlaylistEntity> result;
+	if (StringUtils.isBlank(search)) {
+	    result = playlistRepository.findPlaylistEntitiesByUserId(id);
+	} else {
+	    result = playlistRepository.findPlaylistEntitiesByUserIdAndAndNameContainsIgnoreCase(id, search);
+	}
+	return result.stream().map(playlistMapper::toDto).toList();
     }
 }
